--- a/index.html
+++ b/index.html
@@ -9,21 +9,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>
-      <div id="main.menu">
-        <div class="logo">
-          <a href=""><img src="/LOGO.png" alt="LOGO"></a>
-        </div>
-        <div id="menu">
-          <ul class="menu">
-            <li><a href="index.html" class="link">Home</a></li>
-            <li><a href="about.html" class="link">About</a></li>
-            <li><a href="project.html" class="link">project</a></li>
-            <li><a href="contact.html" class="link">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+
+    <header class="header">
+      <a href=""><img src="/LOGO.png" alt="LOGO"></a>
+
+      <nav class="navBar">
+        <a href="index.html" class="link">Home</a>
+        <a href="about.html" class="link">About</a>
+        <a href="project.html" class="link">project</a>
+        <a href="contact.html" class="link">Contact</a>
+      </nav>
+    </header>
+
+    </header>
+
     <br />
     <h2>Home</h2>
     <p>hi</p>
@@ -35,3 +34,19 @@
     <p>hi</p>
   </body>
 </html>
+
+
+
+    <!--<header>
+
+      <div class="logo">
+        <img src="/LOGO.png" alt="LOGO">
+      </div>
+      <div class="menu.bar">
+        <ul class="menu.bar">
+          <li><a href="index.html" class="link">Home</a></li>
+          <li><a href="about.html" class="link">About</a></li>
+          <li><a href="project.html" class="link">project</a></li>
+          <li><a href="contact.html" class="link">Contact</a></li>
+        </ul>
+      </div>-->
