--- a/index.html
+++ b/index.html
@@ -2,17 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Iman Haji</title>
+    <link rel="icon" type="images/x-icon" href="/LOGO.png" />
+    <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Cinzel:wght@400;600&family=Nabla&family=Rajdhani:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Cinzel:wght@400;600&family=Nabla&family=Rajdhani:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Cinzel:wght@400;600&family=Monsieur+La+Doulaise&family=Nabla&family=Rajdhani:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="backgroundIMG">
+      <img src="https://i.pinimg.com/564x/cb/66/8e/cb668e42e0da16e478cbb9445ea0e97b.jpg" alt="floral">
+      <div class="welcomeTo">WELCOME TO</div>
+      <div class="myPortfolio">My Portfolio</div>
+      <button>get Started</button>
+      <button id="button">Get Started</button>
+    </div>
+
 
     <header class="header">
       <a href=""><img src="/LOGO.png" alt="LOGO"></a>
-
+      
       <nav class="navBar">
         <a href="index.html" class="link">Home</a>
         <a href="about.html" class="link">About</a>
@@ -20,18 +30,7 @@
         <a href="contact.html" class="link">Contact</a>
       </nav>
     </header>
-
-    </header>
-
-    <br />
-    <h2>Home</h2>
-    <p>hi</p>
-    <br />
-    <h2>About me</h2>
-    <p>hi</p>
-    <br />
-    <h2>Contact</h2>
-    <p>hi</p>
+    
   </body>
 </html>
 
