background colours + company info added

--- a/index.html
+++ b/index.html
@@ -36,10 +36,29 @@
         <button id="button">get Started</button>
       </a>
     </div>
-  
+
+    <div class="colorful-section first">
+
+    </div>
+    <div class="colorful-section blue">
+
+    </div>
+    <div class="colorful-section green">
+
+    </div>
 
 
+    <div class="colorful-section company">
+      <p class="companyInfo">Company</p>
+      <p class="home">Home</p>
+      <p class="about"> About</p>
+      <p class="projects"> Projects</p>
+      <p class="contactUs">Contact Us</p>
 
+      <p class="socials">Socials</p>
+      <p class="instagram">Instagram</p>
+      <p class="linkedin">LinkedIn</p>
+    </div>
 
 
 
