terms and conditions page

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     <div class="colorful-section inquiry"> <!--     -->
 
 
-      <!--conract form-->
+      <!--contact form-->
       <form class="contact-form" action="contact-form">
         <label for="firstName"></label>
         <div>
@@ -58,11 +58,19 @@
         <div>
           <input type="text" name="lastName" id="lastName" placeholder="Last Name">
         </div>
+
         <label for="email"></label>
         <div>
           <input type="text" name="email" id="email" placeholder="*Email" required>
         </div>
         
+        <label for="freeform"></label>
+        <div>
+          <textarea name="freeform" id="freeform" cols="45" rows="5" placeholder="*Message..." required></textarea>
+        </div>
+
+        <p class="termsAndConditions">By pressing <strong>Send</strong>, you agree to our</p>
+        <p class="termsAndConditions"><a href="termsAndConditions.html">Terms and Conditions.</a></p>
       </form>
       <div>
         <a href="contact.html">
