terms and condition button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div>
       <a href="contact.html">
-        <button id="button">get Started</button>
+        <button id="buttonStarted" class="buttonStarted">get Started</button>
       </a>
     </div>
 
