--- a/about.html
+++ b/about.html
@@ -30,14 +30,14 @@
     <div class="userInquiry">
       <div class="workWithUs">
         <p>
-          Want to work with Us?
+          Want to work with Us? <br> Inquire Below.
         </p>
       </div>
-      <div class="inquire">
+      <!--<div class="inquire">
         <p>
           Inquire Below.
         </p>
-      </div>
+      </div>-->
     </div>
 
     <!-- information gathering-->
@@ -48,41 +48,54 @@
 
 
       <!--contact form-->
-      <form class="contact-form" method="get" action="contact-form" autocomplete="on">
-        <label for="firstName"></label>
-        <div>
-          <input type="text" name="firstName" id="firstName" placeholder="*First Name" required>
-        </div>
+      <div class="formmmmm">
+        <div class="column3">
+          <form class="contact-form" method="get" action="contact-form" autocomplete="on">
+            <label for="firstName"></label>
+             <input type="text" name="firstName" id="firstName" placeholder="*First Name" required>
 
-        <label for="lastName"></label>
-        <div>
-          <input type="text" name="lastName" id="lastName" placeholder="Last Name">
-        </div>
 
-        <label for="email"></label>
-        <div>
-          <input type="text" name="email" id="email" placeholder="*Email" required>
-        </div>
+             <label for="lastName"></label>
+             <input type="text" name="lastName" id="lastName" placeholder="Last  Name">
+
+
+             <label for="email"></label>
+             <input type="text" name="email" id="email" placeholder="*Email" required>
+
         
-        <label for="freeform"></label>
-        <div>
-          <textarea name="freeform" id="freeform" cols="45" rows="5" placeholder="*Message..." required></textarea>
+              <label for="freeform"></label>
+              <textarea name="freeform" id="freeform" cols="45" rows="5" placeholder="*Message..." required></textarea>
+
+              <p class="termsAndConditions">By pressing <strong>Send</strong>, you agree to our</p>
+
+              <p class="TCP"><a href="termsAndConditions.html">Terms and Conditions.</a></p>
+
+
+
+
+              
+                <div class="centered">
+                  <a href="">
+                 <button class="buttonSend">SEND</button>
+                  </a>
+                </div>
+          </form>
+          </div>
         </div>
-      </form>
 
 
 
 
+<!--
+  
+  <div>
+    <p class="termsAndConditions">By pressing <strong>Send</strong>, you agree to our</p>
+    <p class="termsAndConditions"><a href="termsAndConditions.html">Terms and Conditions.</a></p>
+  </div>
+</div>
 
-      <div>
-        <p class="termsAndConditions">By pressing <strong>Send</strong>, you agree to our</p>
-        <p class="termsAndConditions"><a href="termsAndConditions.html">Terms and Conditions.</a></p>
-        <a href="contact.html">
-          <button id="button">Send</button>
-        </a>
-      </div>
-    </div>
 
+-->
 
 
 
