terms and condition checkbox

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 
               
                 <div class="centered">
-                  <a href="">
+                  <a href="thankYou.html">
                  <button class="buttonSend">SEND</button>
                   </a>
                 </div>
