--- a/termsAndConditions.html
+++ b/termsAndConditions.html
@@ -30,7 +30,7 @@
 
       <p class="mainTerms">
         1.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        
+
         2.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Semper feugiat nibh sed pulvinar. Gravida arcu ac tortor dignissim convallis aenean.
 
         3.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget lorem dolor sed viverra ipsum. Amet facilisis magna etiam tempor. Donec enim diam vulputate ut pharetra. Odio ut enim blandit volutpat maecenas. Dui sapien eget mi proin sed libero enim sed faucibus. Fames ac turpis egestas maecenas. Imperdiet sed euismod nisi porta lorem. Non pulvinar neque laoreet suspendisse. Nisl vel pretium lectus quam.
@@ -44,11 +44,15 @@
         <br class="brT">
         7.Fames ac turpis egestas maecenas. Imperdiet sed euismod nisi porta lorem. Non pulvinar neque laoreet suspendisse. Nisl vel pretium lectus quam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget lorem dolor sed viverra ipsum. 
       </p>
+      <div class="checkbox">
+        <input type="checkbox" name="checkbox" id="checkbox" required>
+        <label for="checkbox">I understand the Terms and Conditions and want to proceed.</label>
+      <div>
+        <a href="about.html">
+          <button id="buttonBack" class="buttonBack">Back</button>
+        </a>
+      </div>
+      </div>
     </main>
-  
-
-
-
-
   </body>
 </html>
