checkbox connected to the back button

--- a/termsAndConditions.html
+++ b/termsAndConditions.html
@@ -29,29 +29,29 @@
       <p class="lastUpdated">Last updated: 17.10.2023 <br> Please read our Terms and Conditions carefully before interacting and using our website. <br> Our Terms and Conditions are subjected to change. </p>
 
       <p class="mainTerms">
-        1.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-
-        2.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Semper feugiat nibh sed pulvinar. Gravida arcu ac tortor dignissim convallis aenean.
-
-        3.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget lorem dolor sed viverra ipsum. Amet facilisis magna etiam tempor. Donec enim diam vulputate ut pharetra. Odio ut enim blandit volutpat maecenas. Dui sapien eget mi proin sed libero enim sed faucibus. Fames ac turpis egestas maecenas. Imperdiet sed euismod nisi porta lorem. Non pulvinar neque laoreet suspendisse. Nisl vel pretium lectus quam.
-        <br class="brT">
-        4.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac tortor vitae purus faucibus ornare. Lorem ipsum dolor sit amet consectetur adipiscing elit ut.
-        <br class="brT">
-        5.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        <br class="brT">
-
-        6.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget lorem dolor sed viverra ipsum. Amet facilisis magna etiam tempor. Donec enim diam vulputate ut pharetra. Odio ut enim blandit volutpat maecenas. Dui sapien eget mi proin sed libero enim sed faucibus. Fames ac turpis egestas maecenas. Imperdiet sed euismod nisi porta lorem. Non pulvinar neque laoreet suspendisse. Nisl vel pretium lectus quam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget lorem dolor sed viverra ipsum. Amet facilisis magna etiam tempor. Donec enim diam vulputate ut pharetra. Odio ut enim blandit volutpat maecenas. Dui sapien eget mi proin sed libero enim sed faucibus. Fames ac turpis egestas maecenas. Imperdiet sed euismod nisi porta lorem. Non pulvinar neque laoreet suspendisse. Nisl vel pretium lectus quam.
-        <br class="brT">
-        7.Fames ac turpis egestas maecenas. Imperdiet sed euismod nisi porta lorem. Non pulvinar neque laoreet suspendisse. Nisl vel pretium lectus quam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget lorem dolor sed viverra ipsum. 
+        1. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        <br><br>
+        2.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Semper feugiat nibh sed pulvinar. Gravida arcu ac tortor dignissim convallis aenean.<br><br>
+        3.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget lorem dolor sed viverra ipsum. Amet facilisis magna etiam tempor. Donec enim diam vulputate ut pharetra. Odio ut enim blandit volutpat maecenas. Dui sapien eget mi proin sed libero enim sed faucibus. Fames ac turpis egestas maecenas. Imperdiet sed euismod nisi porta lorem. Non pulvinar neque laoreet suspendisse. Nisl vel pretium lectus quam.
+        <br><br>        
+        4.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac tortor vitae purus faucibus ornare. Lorem ipsum dolor sit amet consectetur adipiscing elit ut.
+        <br><br>
+        5.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        <br><br>
+        6.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget lorem dolor sed viverra ipsum. Amet facilisis magna etiam tempor. Donec enim diam vulputate ut pharetra. Odio ut enim blandit volutpat maecenas. Dui sapien eget mi proin sed libero enim sed faucibus. Fames ac turpis egestas maecenas. Imperdiet sed euismod nisi porta lorem. Non pulvinar neque laoreet suspendisse. Nisl vel pretium lectus quam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget lorem dolor sed viverra ipsum. Amet facilisis magna etiam tempor. Donec enim diam vulputate ut pharetra. Odio ut enim blandit volutpat maecenas. Dui sapien eget mi proin sed libero enim sed faucibus. Fames ac turpis egestas maecenas. Imperdiet sed euismod nisi porta lorem. Non pulvinar neque laoreet suspendisse. Nisl vel pretium lectus quam.
+        <br><br>
+        7.  Fames ac turpis egestas maecenas. Imperdiet sed euismod nisi porta lorem. Non pulvinar neque laoreet suspendisse. Nisl vel pretium lectus quam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget lorem dolor sed viverra ipsum. 
       </p>
+    <form action="checkbox-form">
       <div class="checkbox">
-        <input type="checkbox" name="checkbox" id="checkbox" required>
-        <label for="checkbox">I understand the Terms and Conditions and want to proceed.</label>
-      <div>
-        <a href="about.html">
+          <input type="checkbox" name="checkbox" id="checkbox" required>
+          <label for="checkbox" >I understand the Terms and Conditions and want to proceed.</label>
+          <div>
+          <a href="about.html" >
           <button id="buttonBack" class="buttonBack">Back</button>
-        </a>
+          </a>
       </div>
+    </form>
       </div>
     </main>
   </body>
