--- a/inquiry.html
+++ b/inquiry.html
@@ -14,12 +14,9 @@
     <div class="logo">
       <a href=""><img src="/LOGO.png" alt="LOGO"></a>
     </div>
-
-
     <!-- nav bar-->
     <nav class="navbar">
       <ul>
-        <li><a href="about.html" class="link">About</a></li>
         <li><a href="project.html" class="link">project</a></li>
         <li><a href="contact.html" class="link">Contact</a></li>
         <li><a href="index.html" class="link">Home</a></li>
@@ -46,36 +43,8 @@
           <!-- this is for the beginning of the page-->
     <div class="colorful-section-blue"> <!--     -->
 
-
-      <!--contact form-->
-      <div class="formmmmm">
-        <div class="column3">
-          <form class="contact-form" method="get" action="contact-form" autocomplete="on">
-            <label for="firstName"></label>
-             <input type="text" name="firstName" id="firstName" placeholder="*First Name" required>
-
-
-             <label for="lastName"></label>
-             <input type="text" name="lastName" id="lastName" placeholder="Last  Name">
-
-
-             <label for="email"></label>
-             <input type="text" name="email" id="email" placeholder="*Email" required>
-
-        
-              <label for="freeform"></label>
-              <textarea name="freeform" id="freeform" cols="45" rows="5" placeholder="*Message..." required></textarea>
-
-              <p class="termsAndConditions">By pressing <strong>Send</strong>, you agree to our</p>
-
-              <p class="TCP"><a href="termsAndConditions.html">Terms and Conditions.</a></p>
-
-
-
-
-              
                 <div class="centered">
-                  <a href="thankYou.html">
+                  <a href=" .       ">
                  <button class="buttonSend">SEND</button>
                   </a>
                 </div>
@@ -114,9 +83,7 @@
 
       <nav class="companynav">
         <ul>
-          <li><a href="about.html" class="link">company</a></li>
           <li><a href="index.html" class="link">home</a></li>
-          <li><a href="about.html" class="link">about</a></li>
           <li><a href="contact.html" class="link">contact</a></li>
           <li><a href="https://www.instagram.com/" class="link">Instagram</a></li>
           <li><a href="https://www.linkedin.com/home" class="link">LinkedIn</a></li>
