--- a/termsAndConditions.html
+++ b/termsAndConditions.html
@@ -17,7 +17,6 @@
 
     <nav class="navbar">
       <ul>
-        <li><a href="about.html" class="link">About</a></li>
         <li><a href="project.html" class="link">project</a></li>
         <li><a href="contact.html" class="link">Contact</a></li>
         <li><a href="index.html" class="link">Home</a></li>
@@ -47,7 +46,7 @@
           <input type="checkbox" name="checkbox" id="checkbox" required>
           <label for="checkbox" >I understand the Terms and Conditions and want to proceed.</label>
           <div>
-          <a href="about.html" >
+          <a href="thankYou.html" >
           <button id="buttonBack" class="buttonBack">Back</button>
           </a>
       </div>
