progress bar percentages

--- a/project.html
+++ b/project.html
@@ -39,23 +39,30 @@
         
           <div class="skill">
             <span class="html">HTML</span>
-              <div class="progress-bar" id="html">
-                <div class="progress"> </div>
+              <div class="progress-barHTML" id="html">
+                <div class="progressHTML"> </div>
               </div>
            </div>
 
             <div class="skill">
               <span class="css" >CSS</span>
-              <div class="progress-bar">
-                 <div class="progress"></div>
+              <div class="progress-barCSS">
+                 <div class="progressCSS"></div>
              </div>
             </div>
         
               <div class="skill">
               <span class="javascript">JavaScript</span>
-                <div class="progress-bar">
-                <div class="progress"></div>
+                <div class="progress-barJS">
+                <div class="progressJS"></div>
               </div>
+          </div>
+
+          <div class="skill">
+            <span class="design" >UX/UI DESIGN</span>
+            <div class="progress-barDesign">
+               <div class="progressDesign"></div>
+           </div>
           </div>
 
       </section>
