--- a/inquiry.html
+++ b/inquiry.html
@@ -14,6 +14,8 @@
     <div class="logo">
       <a href=""><img src="/LOGO.png" alt="LOGO"></a>
     </div>
+
+
     <!-- nav bar-->
     <nav class="navbar">
       <ul>
@@ -25,82 +27,17 @@
     
 <!-- inquiry text -->
     <div class="userInquiry">
-      <div class="workWithUs">
-        <p>
-          Want to work with Us? <br> Inquire Below.
+      <div class="thankYouInquiry">
+        <p class="thankYou">
+          Thank You for your inquiry.
+        </p>
+        <p class="thankYou">
+          shortly, You'll receive a copy of your inquiry via email.
         </p>
       </div>
-      <!--<div class="inquire">
-        <p>
-          Inquire Below.
-        </p>
-      </div>-->
+
     </div>
 
-    <!-- information gathering-->
-
-
-          <!-- this is for the beginning of the page-->
-    <div class="colorful-section-blue"> <!--     -->
-
-                <div class="centered">
-                  <a href=" .       ">
-                 <button class="buttonSend">SEND</button>
-                  </a>
-                </div>
-          </form>
-          </div>
-        </div>
-
-
-
-
-<!--
-  
-  <div>
-    <p class="termsAndConditions">By pressing <strong>Send</strong>, you agree to our</p>
-    <p class="termsAndConditions"><a href="termsAndConditions.html">Terms and Conditions.</a></p>
-  </div>
-</div>
-
-
--->
-
-
-
-
-
-
-
-
-
-          <!--this is for the bottom of the page-->
-    <div class="colorful-section company"> <!--companyNav...-->
-      
-      <div class="companyInfo">
-        <p>Company & Socials</p>
-      </div>
-
-      <nav class="companynav">
-        <ul>
-          <li><a href="index.html" class="link">home</a></li>
-          <li><a href="contact.html" class="link">contact</a></li>
-          <li><a href="https://www.instagram.com/" class="link">Instagram</a></li>
-          <li><a href="https://www.linkedin.com/home" class="link">LinkedIn</a></li>
-        </ul>    
-      </nav>
-
-      <div class="trademark">
-        <p>Iman Haji ©</p>
-      </div>
-      <!--
-      <nav class="socialsnav">
-        <ul>
-          <li><a href="https://www.instagram.com/" class="link">Instagram</a></li>
-          <li><a href="project.html" class="link">LinkedIn</a></li>
-        </ul>    
-      </nav>-->
-    </div>
 
   </body>
 </html>
