--- a/termsAndConditions.html
+++ b/termsAndConditions.html
@@ -41,15 +41,16 @@
         <br><br>
         7.  Fames ac turpis egestas maecenas. Imperdiet sed euismod nisi porta lorem. Non pulvinar neque laoreet suspendisse. Nisl vel pretium lectus quam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget lorem dolor sed viverra ipsum. 
       </p>
-    <form action="checkbox-form">
-      <div class="checkbox">
-          <input type="checkbox" name="checkbox" id="checkbox" required>
-          <label for="checkbox" >I understand the Terms and Conditions and want to proceed.</label>
-          <div>
-          <a href="thankYou.html" >
-          <button id="buttonBack" class="buttonBack">Back</button>
-          </a>
-      </div>
+          <form action="/contact.html">
+             <div class="checkbox">
+                   <input type="checkbox" name="checkbox" id="checkbox" required>
+                   <label for="checkbox" >I understand the Terms and Conditions and want to proceed.</label>
+             <div>
+              <div>
+                <a href="contact.html" >
+                <button id="buttonBack" class="buttonBack">Back</button>
+                </a>
+              </div>
     </form>
       </div>
     </main>
