--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
       <!--contact form-->
       <div class="formmmmm">
         <div class="column3">
-          <form class="contact-form" method="get" action="contact-form" autocomplete="on">
+          <form class="inquiry.html" method="get" action="/inquiry.html" autocomplete="on">
             <label for="firstName"></label>
              <input type="text" name="firstName" id="firstName" placeholder="*First Name" required>
 
