button and user inquiry modified via css

--- a/inquiry.html
+++ b/inquiry.html
@@ -26,7 +26,7 @@
     </nav>
     
 <!-- inquiry text -->
-    <div class="userInquiry">
+    <div class="userInquiryHTML">
       <div class="thankYouInquiry">
         <p class="thankYou">
           Thank You for your inquiry.
@@ -35,9 +35,13 @@
           shortly, You'll receive a copy of your inquiry via email.
         </p>
       </div>
-
     </div>
 
+    <div>
+      <a href="index.html" >
+      <button id="buttonBackInquiry" class="buttonBackInquiry">Back</button>
+      </a>
+    </div>
 
   </body>
 </html>
