card effect with flexbox

--- a/index.html
+++ b/index.html
@@ -39,8 +39,65 @@
     <div class="colorful-section first">
 
     </div>
-    <div class="colorful-section blue">
-    </div>
+
+
+
+    <h1>sneak peak</h1>
+    <h5>Press the button, it'll redirect you to my Projects folder!</h5>
+<section class="container">
+  <div class="card">
+    <div class="card-image card1"></div>
+    <h2>title</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+  </div>
+  <div class="card">
+    <div class="card-image card2"></div>
+    <h2>title</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+  </div>
+  <div class="card">
+    <div class="card-image card3"></div>
+    <h2>title</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+  </div>
+</section>
+
+
+
+<!-- 
+<div class="row">
+  <div class="column1">
+    <img src="https://i.pinimg.com/564x/d3/3e/e3/d33ee372509f3eb0ad15166fe22671b5.jpg" alt="img" width="50%">
+  </div>
+  <div class="column2">
+    <img src="https://i.pinimg.com/564x/ce/f9/45/cef9458ccd698c3cfd175b6d47b27120.jpg" alt="img" width="50%">
+  </div>
+</div>
+
+
+
+
+      <div class="imagess">
+        <div class="image1">
+        </div>
+        <div class="image2">
+        </div>
+      </div>
+    </div>-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
     <div class="colorful-section green">
 
     </div>
