--- a/index.html
+++ b/index.html
@@ -43,22 +43,25 @@
 
 
     <h1>sneak peak</h1>
-    <h5>Press the button, it'll redirect you to my Projects folder!</h5>
+    <h5>Press the "Read More" button, it'll direct you to more of my Projects folder!</h5>
 <section class="container">
   <div class="card">
     <div class="card-image card1"></div>
     <h2>title</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
+    <a href="">Read More...</a>
   </div>
   <div class="card">
     <div class="card-image card2"></div>
     <h2>title</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
+    <a href="">Read More...</a>
   </div>
   <div class="card">
     <div class="card-image card3"></div>
     <h2>title</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
+    <a href="">Read More...</a>
   </div>
 </section>
 
