card heading and paragraph modified

--- a/index.html
+++ b/index.html
@@ -42,30 +42,48 @@
 
 
 
-    <h1>sneak peak</h1>
-    <h5>Press the "Read More" button, it'll direct you to more of my Projects folder!</h5>
+    <h1 class="sneakpeak1">sneak peak</h1>
+    <h5 class="sneakpeak2"> Press "Progress" , it'll direct you to my <strong>current</strong> skills in a <i>Progress Bar</i>!</h5>
 <section class="container">
   <div class="card">
     <div class="card-image card1"></div>
     <h2>title</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
-    <a href="">Read More...</a>
+    <a href="project.html">See Progress...</a>
   </div>
   <div class="card">
     <div class="card-image card2"></div>
     <h2>title</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
-    <a href="">Read More...</a>
+    <a href="project.html">See Progress...</a>
   </div>
   <div class="card">
     <div class="card-image card3"></div>
     <h2>title</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
-    <a href="">Read More...</a>
+    <a href="project.html">See Progress...</a>
   </div>
 </section>
-
-
+<section class="container">
+  <div class="card">
+    <div class="card-image card4"></div>
+    <h2>title</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
+    <a href="project.html">See Progress...</a>
+  </div>
+  <div class="card">
+    <div class="card-image card5"></div>
+    <h2>title</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
+    <a href="project.html">See Progress...</a>
+  </div>
+  <div class="card">
+    <div class="card-image card6"></div>
+    <h2>title</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
+    <a href="project.html">See Progress...</a>
+  </div>
+</section>
 
 <!-- 
 <div class="row">
